Upgrade2 de la fiche d'LRC

--- a/LRC/Fiches/Fiche_from_TD.tex
+++ b/LRC/Fiches/Fiche_from_TD.tex
@@ -204,12 +204,10 @@ TD4 mais pas beaucoup de correction
     \item On développe les formule $ \Box, \diamond  $ comme un arbre en explorant les possibilités.
     \item On peut donner des contres exemples.
     \item Règle de necessitation : $ M \models \phi \equiv M \models \Box \Phi $ 
-    \item Penser que parfois les flèches de récursion ne sont pas dessiner
-    \item /!\textbackslash  au implication, parfois une traduction en vaut la penne $ a \to b $ toujours vrais pour les mondes où $ a $ est faux $\rightarrow$ vérifier surtout les mondes où $ a $ est vrais
+    \item Penser que parfois les flèches de récursion ne sont pas dessiné
+    \item /!\textbackslash . Au implication, parfois une traduction en vaut la penne $ a \to b $ toujours vrais pour les mondes où $ a $ est faux $\rightarrow$ vérifier surtout les mondes où $ a $ est vrais
     \item \textbf{s'entraîner vite fait fin exo 1 TD5}
     \item Penser au démo par l'absurde pour les trucs cons (TD5, fin exo3)
-    \item Savoir si $ p $ :  $ K^{Si}_p \equiv K p \vee K \neg p $ 
-    \item Savoir lequel parmi $ a,b,c \equiv K_a \vee K_b \vee K_c $ 
     \item Loi de Morgan \begin{itemize}
         \item $ \diamond \phi \equiv \neg \Box \neg \phi  $ 
         \item $ \Box \phi \equiv \neg \diamond \neg \phi  $ 
@@ -224,7 +222,7 @@ Liste des axiomes logique épistémique S5 :
     \item B : Symétrie des flèches : $ \phi \to \Box \diamond \phi  $ Implique qu'il existe toujours le chemin retour : $ \forall w, w', (w,w') \in R \to (w',w) \in R $ 
 \end{itemize}
 
-\subsection{logique épistémique}
+\subsection{Logique épistémique}
 \begin{itemize}
     \item $ M, w_1 \models K_i p \equiv M, w_1 \models \Box p $ en utilisant les flèches indicées $ i $
     \item Croire possible $ p \equiv B_i \phi \equiv \diamond \phi \equiv \neg \Box \neg \phi \equiv \neg K \neg \phi  $ 
