update sur le cours de SIGNAL qui ne sera pas numérique

--- a/SIGNAL/cours.tex
+++ b/SIGNAL/cours.tex
@@ -59,5 +59,7 @@ Exam : Feuille A4 manuscrite \textbf{recto}. Attention démonstration de formule
 \underline{Nouveau cours du 28/10} \\
 Again note sur le poly.
 
+\textbf{J'ai demandé pour avoir le diapo et l'annoté numériquement mais comme il veux qu'on viennent en cours : nop}. Il y aura donc plus rien ici lol
+
 
 \end{document}
